2008-02-28  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (io_watch_stdout): fix misspelling of
	"palindrome" that would make us wait forever when that case occurred
	(bug #519398)

2008-02-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_dialog):
	* gnome-about-me.glade: fix widget tab order (bug #339936)

2008-02-16  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: don't distribute the .desktop.in file

2008-02-12  Jens Granseuer  <jensgr@gmx.net>

	* e-image-chooser.c: (e_image_chooser_class_init),
	(image_drag_data_received_cb):
	* gnome-about-me.c: (about_me_update_preview): port to gio

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (passdlg_spawn_passwd): add a translation
	hint

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.glade: don't mark empty and padding strings for
	translation (bug #502087)

2007-11-24  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-about-me.glade: remove non-functional Help button (bug #497803)

2007-11-10  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (authenticated_user),
	(io_watch_stdout): don't get confused when the user does not have a
	password set and passwd immediately asks for the new one. This resulted
	in an endless loop up to now (bug #336872)

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (io_watch_stdout): add another string to
	the list of recognized error returns from passwd ("must choose a longer
	password")

2007-08-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_email): fix the last commit to use
	proper API to release the VCardAttributes so we don't crash with newer
	e-d-s (bug #468848)

2007-08-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: honour mail address attributes when setting
	up Home and Work addresses

2007-07-31  Jens Granseuer  <jensgr@gmx.net>
